<resources>
    <string name="app_name">Parking Finding</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_as_user">Login As User</string>
    <string name="login_as_admin">Login As Admin</string>
    <string name="already_have_an_account">Already have an account,</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_location">Your location</string>
    <string name="fakeAddress">90St, Almaady, Egypt</string>
    <string name="fakeNumber">+9</string>
    <string name="notification">Notification</string>
    <string name="let_s_find_the_best_parking_space">Let\'s find the best Parking space</string>
    <string name="welcome_admin">Welcome, admin</string>
    <string name="your_transportation">Your Transportation</string>
    <string name="add_a_new_parking">Add a new Parking</string>
    <string name="car">Car</string>
    <string name="recent_place">Recent Place</string>
    <string name="usm_parking_space">USM Parking space</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="scan_code_to_leave_place">Scan Code to leave place</string>
    <string name="cancel_my_reservation">Cancel my reservation</string>
    <string name="add_new_parking">Add new Parking</string>
    <string name="parking_name">Parking Name</string>
    <string name="station_images">Station Images</string>
    <string name="how_many_slot">How many slot?</string>
    <string name="ex_12">Ex: 12</string>
    <string name="price_per_hour">Price per hour</string>
    <string name="ex_2_5">Ex: 2.5</string>
    <string name="add_parking_location">Add parking location</string>
    <string name="add_location">Add Location</string>
    <string name="address_alexandria">10 Ramadan, Ezbet Saad, Sidi Gaber, Alexandria Governorate 7063122</string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="location">Location</string>
    <string name="has_been_booked">has been booked</string>
    <string name="you_have_60_sec_to_scan_qr_code_at_the_parking">You have 60 Sec to scan QR code at the Parking</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="confirm">Confirm</string>
    <string name="purchase">Purchase</string>
    <string name="card_number">Card number</string>
    <string name="total_amount">Total amount</string>
    <string name="notifications">Notifications</string>

</resources>