<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.parking.AddParkingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/back_btn"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_new_parking"
                android:textColor="@color/txtColor2"
                android:textSize="@dimen/_18ssp" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/parkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:background="@drawable/input1"
                android:hint="@string/parking_name"
                android:inputType="textPersonName"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/txtColor2"
                android:textColorHighlight="@color/txtColor2"
                android:textColorHint="@color/txtColor2"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/station_images"
                android:textColor="@color/txtColor2"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addImageList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="1"
                tools:listitem="@layout/item_add_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/how_many_slot"
                android:textColor="@color/txtColor2"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/slots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:background="@drawable/input1"
                android:hint="@string/ex_12"
                android:inputType="number"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/txtColor2"
                android:textColorHighlight="@color/txtColor2"
                android:textColorHint="@color/txtColor2"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/price_per_hour"
                android:textColor="@color/txtColor2"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:background="@drawable/input1"
                android:hint="@string/ex_2_5"
                android:inputType="number"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/txtColor2"
                android:textColorHighlight="@color/txtColor2"
                android:textColorHint="@color/txtColor2"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/add_parking_location"
                android:textColor="@color/txtColor2"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/locationList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="2"
                tools:listitem="@layout/item_location" />

            <TextView
                android:id="@+id/add_location"
                style="@style/btnStyleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:drawableEnd="@drawable/location"
                android:gravity="center"
                android:text="@string/add_location" />

            <TextView
                android:id="@+id/confirm"
                style="@style/btnStyleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginVertical="@dimen/_32sdp"
                android:gravity="center"
                android:text="@string/confirm"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>