<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/_16sdp"
    android:background="@color/background"
    tools:context=".views.auth.SignInActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:id="@+id/spacer"
        android:layout_below="@id/icon"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="@drawable/input1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/txtColor2"
        android:textColorHighlight="@color/txtColor2"
        android:textColorHint="@color/txtColor2"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="@drawable/input1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:textColor="@color/txtColor2"
        android:textColorHighlight="@color/txtColor2"
        android:textColorHint="@color/txtColor2"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/signIn"
        style="@style/btnStyleHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/txtColor3"
        android:textSize="@dimen/_18ssp" />


    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>


</RelativeLayout>