<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".views.home.MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_below="@id/icon" />

    <TextView
        android:id="@+id/loginUser"
        style="@style/btnStyleHome"
        android:layout_below="@id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/login_as_user" />

    <TextView
        android:id="@+id/loginAdmin"
        style="@style/btnStyleHome2"
        android:layout_below="@id/loginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/login_as_admin" />


</RelativeLayout>