<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".views.home.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background"
            android:layout_marginTop="@dimen/n60sdp"
            app:cardCornerRadius="@dimen/_50sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_16sdp"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/txtColor2"
                            android:textSize="@dimen/_13ssp"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:text="@string/your_location"/>

                        <LinearLayout
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_marginEnd="@dimen/_8sdp"
                                android:src="@drawable/location"
                                android:contentDescription="" />

                            <TextView
                                android:id="@+id/address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/txtColor2"
                                android:textSize="@dimen/_16ssp"
                                android:text=""/>
                        </LinearLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/notification"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_height="@dimen/_40sdp">

                        <androidx.cardview.widget.CardView
                            android:layout_alignParentEnd="true"
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            app:cardCornerRadius="@dimen/_9sdp"
                            app:cardElevation="5dp"
                            app:cardBackgroundColor="@color/redColor">

                            <TextView
                                android:id="@+id/count"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/txtColor2"
                                android:textSize="@dimen/_10ssp"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:text="0"/>

                        </androidx.cardview.widget.CardView>


                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/back_btn"
                            android:padding="@dimen/_6sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/notification"
                            android:contentDescription="@string/notification" />

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/logout"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/back_btn"
                        android:padding="@dimen/_6sdp"
                        android:src="@drawable/ic_logout"
                        android:layout_margin="@dimen/_8sdp"
                        android:contentDescription="@string/notification" />

                </LinearLayout>

                <TextView
                    android:id="@+id/titleHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txtColor2"
                    android:textSize="@dimen/_28ssp"
                    android:textAlignment="textStart"
                    android:layout_margin="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_16sdp"
                    android:text="@string/let_s_find_the_best_parking_space"/>

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_40sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/transportation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolBar"
            android:padding="@dimen/_16sdp"
            android:text="@string/your_transportation"
            android:textColor="@color/txtColor1"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transportationList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_8sdp"
            android:layout_below="@id/transportation" />

        <TextView
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transportationList"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:text="@string/recent_place"
            android:textColor="@color/txtColor1"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/placesList"
            android:layout_below="@id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/addParking"
            style="@style/btnStyleHome"
            android:layout_below="@id/placesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_32ssp"
            android:drawableEnd="@drawable/add"
            android:padding="@dimen/_16sdp"
            android:text="@string/add_a_new_parking" />

        <TextView
            android:id="@+id/scan"
            style="@style/btnStyleHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addParking"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:drawableStart="@drawable/scan"

            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/scan_code_to_leave_place"
            android:textSize="@dimen/_18ssp" />

        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</ScrollView>